page presentation stage

--- a/Developpement/static/styles/base.css
+++ b/Developpement/static/styles/base.css
@@ -1,3 +1,11 @@
+@font-face{
+  font-family: "Roboto";
+  src: url('../Police/Roboto-Light.ttf');
+}
+@font-face{
+  font-family: "aaa";
+  src: url('../Police/Aaargh.ttf');
+}
 #main{
   margin-top: 5em;
 }
@@ -7,17 +15,12 @@ height: 150%;
 width: 150%;
 }
 
-p,h1,h2{
-  font-family: Verdana,sans-serif;
-}
-
 .fond-noir{
   background-color: rgb(23, 23, 23)
 }
 
 .titre-gpartie{
 text-align: center;
-text-decoration: underline;
 margin-bottom: 10%;
 
 
@@ -206,4 +209,81 @@ height: 125px
   height: 100%;
   width: 100%;
   margin-right: 5%;
+}
+h1{
+  font-family: 'aaa';
+}
+#h2-1{
+  margin-top: -6%;
+  text-align: center;
+}
+.glyph-prof{
+  width: 3%;
+  margin-left: 40%;
+  margin-top: -11%;
+  object-position: fixed;
+}
+.list-profs>ul{
+  list-style-type: none;
+  margin-left: 3.5%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.list-profs li{
+  padding: 3.5%;
+  text-align: center;
+  margin-top: 2%;
+}
+#h2-2{
+  text-align: center;
+}
+h2{
+  font-family: 'aaa';
+}
+.underline{
+  width:10%;
+  margin-left: 45%;
+  margin-top:-1.5%;
+}
+h3{
+  font-family: 'aaa';
+}
+.underline2{
+  width:16%;
+  margin-left: 42.5%;
+  margin-top:-1.5%;
+}
+.dropdowngeneral{
+  /*display: flex;
+  flex-wrap: wrap;*/
+  margin-top: 2%;
+  font-family: 'aaa';
+  padding-right:2%;
+  text-align: center;
+}
+.global2{
+  text-align: center; 
+  display: flex;
+  flex-wrap: wrap;
+  margin-left:33.5%;
+}
+.recherche{
+  text-align: center;
+  font-family: 'aaa';
+  margin-top: 2%;
+}
+.tableau{
+  width:65%;
+  margin-left:18%;
+  margin-top:3%;
+  font-family: 'aaa';
+  text-align: center;
+}
+.tableau th{
+  text-align: center;
+}
+#what{
+  width: 90%;
+  text-align: center;
+  margin-left: 7%;
 }
