--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -5,6 +5,7 @@
 {% block styles %}
 {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/base.css')}}">
+<link rel="stylesheet" href="css/bootstrap-select.css">
 {% endblock %}
 
 {% block navbar %}
@@ -37,6 +38,7 @@
                   <li><a href="/stage/presentation/">Présentation</a></li>
                   <li><a href="/stage/inscription/">Inscription</a></li>
                   <li><a href="/stage/programmes/">Programmes</a></li>
+                  <li><a href="/stage/concerts/">Concerts</a></li>
                   <li><a href="/stage/presse/">Presse</a></li>
                   <li><a href="/stage/recettes/">Recettes</a></li>
 
