page présentation stage

--- a/Developpement/templates/stage/stage_presentation.html
+++ b/Developpement/templates/stage/stage_presentation.html
@@ -4,7 +4,7 @@
     <h1 class="titre-gpartie">Présentation des Stages</h1>
     <div class='first-subtitle'>
         <div id="h2-1"><h2>Les Profs</h2></div>
-        <img class="underline" src="{{ url_for('static',filename='img/underline1.jpg') }}" alt="underline">
+        <img class="underline" src="{{ url_for('static',filename='img/underline1.png') }}" alt="underline">
     </div>
     <div class="list-profs">
         <ul>
@@ -35,7 +35,7 @@
         </ul>
     </div>
     <div id="h2-2"><h2>Vous inscrire à un Stage</h2></div>
-    <img class="underline2" src="{{ url_for('static',filename='img/underline1.jpg') }}" alt="underline">
+    <img class="underline2" src="{{ url_for('static',filename='img/underline1.png') }}" alt="underline">
     <div class="global2">
         <div class="dropdowngeneral">
                 <h4>Votre Niveau: </h4>
