--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -28,7 +28,7 @@
                 <li><a href="/quatuor/repertoire/">Repertoire</a></li>
                 <li><a href="/quatuor/extrait/0">Extrait</a></li>
                 <li><a href="/quatuor/concerts/">Concerts</a></li>
-                <li><a href="/quatuor/presse/actu">Presse</a></li>
+                <li><a href="/quatuor/presse/all/0">Presse</a></li>
               </ul>
             </li>
             <li class="dropdown tab-home">
