--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -57,8 +57,8 @@
       <p>Fabriqant français de clarinette</p>
     </div>
     <div>
-      <a href="www.regioncentre-valdeloire.fr/">
-        <img src="{{ url_for('static',filename='img/logo-vandoren.png') }}" alt="picardie clarinette logo" id="logo-partenaires">
+      <a href="https://www.vandoren-fr.com/">
+        <img src="{{ url_for('static',filename='img/logo-vandoren.png') }}" alt="vandoren logo" id="logo-partenaires">
         <strong>
           <p>Vandoren</p>
         </strong>
