Amelioration du css pour le fichier page_liens.html .

--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -32,7 +32,7 @@
     </a>
   </div>
     <div>
-    <a href="www.regioncentre-valdeloire.fr/">
+    <a href="http://www.regioncentre-valdeloire.fr/">
       <img src="{{ url_for('static',filename='img/logo-region-centre.png') }}" alt="picardie clarinette logo" id="logo-partenaires">
       <strong>
         <p>Region Centre Val de Loire</p>
