--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -9,76 +9,59 @@
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header ">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+<div class="navbar-fixed-top collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
+      <ul class="nav navbar-nav">
         <a class="navbar-brand" href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="dropdown tab-home">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Quatuor<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="/quatuor/presentation/">Présentation</a></li>
-                <li><a href="/quatuor/repertoire/">Repertoire</a></li>
-                <li><a href="/quatuor/extrait/0">Extrait</a></li>
-                <li><a href="/quatuor/concerts/">Concerts</a></li>
-                <li><a href="/quatuor/presse/all/0">Presse</a></li>
-              </ul>
-            </li>
-            <li class="dropdown tab-home">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Stage<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="/stage/presentation/">Présentation</a></li>
-                  <li><a href="/stage/inscription/">Inscription</a></li>
-                  <li><a href="/stage/programmes/">Programmes</a></li>
-                  <li><a href="/stage/concerts/">Concerts</a></li>
-                  <li><a href="/stage/presse/">Presse</a></li>
-                  <li><a href="/stage/recettes/">Recettes</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quatuor <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/quatuor/presentation/">Présentation</a></li>
+            <li><a href="/quatuor/repertoire/">Repertoire</a></li>
+            <li><a href="/quatuor/extrait/0">Extrait</a></li>
+            <li><a href="/quatuor/presse/all/0">Presse</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stage <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/stage/presentation/">Présentation</a></li>
+            <li><a href="/stage/inscription/">Inscription</a></li>
+            <li><a href="/stage/programmes/">Programmes</a></li>
+            <li><a href="/stage/presse/">Presse</a></li>
+            <li><a href="/stage/recettes/">Recettes</a></li>
 
-                  {% if current_user.is_authenticated %}
+            {% if current_user.is_authenticated %}
 
-                  <li><a href="/stage/repertoire/">Repertoire</a></li>
-                  <li><a href="/stage/partitions/">Partitions</a></li>
-                  <li><a href="/stage/souvenirs/">Souvenirs</a></li>
-                  <li><a href="/stage/paiement/">Paiement</a></li>
+            <li><a href="/stage/repertoire/">Repertoire</a></li>
+            <li><a href="/stage/partitions/">Partitions</a></li>
+            <li><a href="/stage/souvenirs/">Souvenirs</a></li>
+            <li><a href="/stage/paiement/">Paiement</a></li>
 
-                  {% endif %}
-
-
-                </ul>
-              </li>
-              <li class="dropdown tab-home">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Autour de la clarinette<span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="/autourClarinette/historique/">Historique</a></li>
-                    <li><a href="/autourClarinette/informations/">Informations</a></li>
-                    <li><a href="/autourClarinette/datesConcerts/">Dates de concerts</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown tab-home">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contact<span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href="/contact/administratif/">Administratif</a></li>
-                      <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
-                      <li><a href="/contact/renseignements/">Renseignements</a></li>
-                      <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
-                      <li><a href="/contact/plaquette/">Plaquettte</a></li>
-                      <li><a href="/contact/musical/">Musical</a></li>
-
-                    </ul>
-                  </li>
-          <li id="tab-liens"><a href="/other/liens">Liens</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-</nav>
+            {% endif %}
+          </ul>
+        </li>
+        <li><a class="dropdown-toggle" href="/quatuor/concerts/">Concerts</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Autour de la clarinette <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/autourClarinette/historique/">Historique</a></li>
+            <li><a href="/autourClarinette/informations/">Informations</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/contact/administratif/">Administratif</a></li>
+            <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
+            <li><a href="/contact/renseignements/">Renseignements</a></li>
+            <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
+            <li><a href="/contact/plaquette/">Plaquettte</a></li>
+            <li><a href="/contact/musical/">Musical</a></li>
+          </ul>
+        </li>
+        <li><a class="dropdown-toggle" href="/other/liens/">Liens</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
 {% endblock %}
 
 {% block content %}
