--- a/Developpement/templates/quatuor/quatuor_presentation.html
+++ b/Developpement/templates/quatuor/quatuor_presentation.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_presentation.css')}}">
 {% block main %}
 <div class="quatuor-presentation">
   <h1 class="titre-gpartie">Presentation</h1>
