--- a/Developpement/templates/quatuor/quatuor_presse.html
+++ b/Developpement/templates/quatuor/quatuor_presse.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_presse.css')}}">
 {% block main %}
 
 <h1>{{ article[0] }}</h1> <!-- Nom de l'article -->
