--- a/Developpement/templates/quatuor/quatuor_concerts.html
+++ b/Developpement/templates/quatuor/quatuor_concerts.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_concerts.css')}}">
 {% block main %}
 <div class="quatuor-concert">
   <h1 class="titre-gpartie">Concerts</h1>
