--- a/Developpement/templates/quatuor/quatuor_extrait.html
+++ b/Developpement/templates/quatuor/quatuor_extrait.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_extrait.css')}}">
 {% block main %}
 {% for elem2 in liste[id] %}
 <div class="page_extrait">
