amelioration css, 1 css/page

--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -4,7 +4,7 @@
 
 {% block styles %}
 {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/base.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
 <link rel="stylesheet" href="css/bootstrap-select.css">
 {% endblock %}
 
@@ -63,6 +63,8 @@
       </ul>
     </div><!-- /.navbar-collapse -->
 {% endblock %}
+
+
 
 {% block content %}
 <div id="main" class="container theme-showcase" role="main">
