--- a/Developpement/templates/quatuor/quatuor_extrait.html
+++ b/Developpement/templates/quatuor/quatuor_extrait.html
@@ -19,15 +19,22 @@
 
 {% if ok %}
 <div class="center">
-  {% if id!=0 %}
-  <a href="/quatuor/extrait/{{ id-1 }}">Précédent</a>
-  {% endif %}
+
+  <ul class="pagination">
   {% for i in range(gliste|length+2) %}
-  <a href="/quatuor/extrait/{{ i }}">{{i}}</a>
+  <li {% if i==id %} class="active" {% endif %}><a href="/quatuor/extrait/{{ i }}">{{i}}</a></li>
   {% endfor %}
-  {% if id!=gliste|length+1 %}
-  <a href="/quatuor/extrait/{{ id+1 }}">Suivant</a>
+  </ul>
+  <ul class="pager">
+  {% if id!=0 %}
+  <li class="previous"><a href="/quatuor/extrait/{{ id-1 }}">Précédent</a></li>
   {% endif %}
+  </ul>
+  <ul class="pager">
+  {% if id!=gliste|length+1 %}
+  <li class="next"><a href="/quatuor/extrait/{{ id+1 }}">Suivant</a></li>
+  {% endif %}
+</ul>
 
 </div>
 {% endif %}
