--- a/Developpement/templates/quatuor/quatuor_presse_all.html
+++ b/Developpement/templates/quatuor/quatuor_presse_all.html
@@ -4,10 +4,9 @@
 <script src="{{ url_for('static',filename='js/jquery.min.js') }}"></script>
 <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
 <div class="container  liste-article">
-<br>c
+<br>
 {% for i in range(liste|length) %}
-{% if i%2==0 %}
-<div class="presse-titre presse-paire">
+<div class="presse-titre {% if i%2==0 %}presse-paire{% else %} presse-impaire {% endif %}">
   <h3>{{liste[i][0]}}</h3>
   <div class="presse-vignette">
     <div id="blocImage">
@@ -17,34 +16,29 @@
     <p>{{ liste[i][4]}}</p>
   </div>
 </div>
-{% else %}
-<div class="presse-titre presse-impaire">
-    <h3>{{liste[i][0]}}</h3>
-  <div class="presse-vignette">
-    <p>{{ liste[i][4]}}</p>
-    <div id="blocImage">
-      <img src="{{ url_for('static',filename='img/'+liste[i][3]+'.png')}}" alt="Image de {{liste[i][0]}}">
-      <p>Posté par {{liste[i][2]}} le {{liste[i][1]}}</p>
-    </div>
-  </div>
 
-</div>
-{% endif %}
+
 
 {% endfor %}
 
 </div>
 {% if ok %}
 <div class="center">
-  {% if id!=0 %}
-  <a href="/quatuor/presse/all/{{ id-1 }}">Précédent</a>
-  {% endif %}
-  {% for i in range(gliste|length+2) %}
-  <a href="/quatuor/presse/all/{{ i }}">{{i}}</a>
-  {% endfor %}
+  <ul class="pagination">
+    {% for i in range(gliste|length+2) %}
+    <li {% if i==id %} class="active" {% endif %} ><a href="/quatuor/presse/all/{{ i }}">{{i}}</a></li>
+    {% endfor %}
+  </ul>
+  <ul class="pager">
+    {% if id!=0 %}
+    <li class="previous"> <a href="/quatuor/presse/all/{{ id-1 }}" class="previous">Précédent</a> </li>
+    {% endif %}
+  </ul>
+  <ul class="pager">
   {% if id!=gliste|length+1 %}
-  <a href="/quatuor/presse/all/{{ id+1 }}">Suivant</a>
+  <li class="next"><a href="/quatuor/presse/all/{{ id+1 }}" class="next">Suivant</a> </li>
   {% endif %}
+  </ul>
 
 </div>
 
