amelioration intendation code

--- a/Developpement/templates/contact/contact_ficheTechnique.html
+++ b/Developpement/templates/contact/contact_ficheTechnique.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block main %}
-
+<h1>Fiche Technique Concert</h1>
+<div class="liens">
+  <h2 id="hliens">Les Membres</h2>
+  <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
+</div>
 
 {% endblock %}
