--- a/Developpement/templates/quatuor/quatuor_presentation.html
+++ b/Developpement/templates/quatuor/quatuor_presentation.html
@@ -3,126 +3,130 @@
 <div class="quatuor-presentation">
   <h1 class="titre-gpartie">Presentation</h1>
   <div class="presentation-gdiv">
-  <div class="presentation-div">
-    <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-1.png') }}" alt="">
-    <div class="presentation-text">
-      <p>Le quatuor</p>
+    <div class="presentation-div">
+      <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-1.png') }}" alt="">
+      <div class="presentation-text">
+        <p>Le quatuor</p>
+      </div>
+      <div class="presentation-text">
+        <p>
+          Né en 1998 de la complicité et de l'amitié de quatre clarinettistes professionnels, tous titulaires d'un premier prix de l'E.N.M. d'Orléans dans la classe de Michel ARRIGNON et du diplôme d'état de professeur de clarinette, le quatuor
+          "Divertimento" se propose de vous faire découvrir l'originalité et la richesse de sa formation à travers un choix d'oeuvres représentatives des différentes époques de l'histoire de la musique.
+        </p>
+      </div>
     </div>
-    <div class="presentation-text">
-      <p>
-        Né en 1998 de la complicité et de l'amitié de quatre clarinettistes professionnels, tous titulaires d'un premier prix de l'E.N.M. d'Orléans dans la classe de Michel ARRIGNON et du diplôme d'état de professeur de clarinette, le quatuor "Divertimento" se propose de vous faire découvrir l'originalité et la richesse de sa formation à travers un choix d'oeuvres représentatives des différentes époques de l'histoire de la musique.
-      </p>
+    <div class="presentation-div">
+      <div class="presentation-text">
+        <p>
+          Par la diversité de son répertoire, allant de la Renaissance à l'époque contemporaine, en passant par le jazz et la musique populaire, le quatuor "Divertimento" se donne pour objectifs l'élaboration et la présentation d'un programme
+          musical divertissant, adapté à chaque circonstance ( concerts, animations en milieu scolaire, cocktails, inaugurations, vernissages... ).
+        </p>
+      </div>
+      <div class="presentation-text">
+        <p>
+          Dans le cadre de ses activités, le Quatuor DIVERTIMENTO attire votre attention sur les prestations musicales qu’il propose aux organisateurs de concerts, communes, regroupements de communes ou associations. Les prestations du Quatuor
+          DIVERTIMENTO sont régulièrement évaluées et validées par la mission culturelle du Conseil régional du Centre. A la demande de l’organisateur du concert, ces prestations peuvent faire l’objet d’un soutien financier accordé par le Conseil
+          régional du Centre dans le cadre de sa politique de développement artistique et culturel.
+        </p>
+      </div>
+      <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-2.png') }}" alt="">
     </div>
-  </div>
-  <div class="presentation-div">
-    <div class="presentation-text">
-      <p>
-        Par la diversité de son répertoire, allant de la Renaissance à l'époque contemporaine, en passant par le jazz et la musique populaire, le quatuor "Divertimento" se donne pour objectifs l'élaboration et la présentation d'un programme musical divertissant, adapté à chaque circonstance ( concerts, animations en milieu scolaire, cocktails, inaugurations, vernissages... ).
-      </p>
-    </div>
-    <div class="presentation-text">
-      <p>
-        Dans le cadre de ses activités, le Quatuor DIVERTIMENTO attire votre attention sur les prestations musicales qu’il propose aux organisateurs de concerts, communes, regroupements de communes ou associations. Les prestations du Quatuor DIVERTIMENTO sont régulièrement évaluées et validées par la mission culturelle du Conseil régional du Centre. A la demande de l’organisateur du concert, ces prestations peuvent faire l’objet d’un soutien financier accordé par le Conseil régional du Centre dans le cadre de sa politique de développement artistique et culturel.
-      </p>
-    </div>
-    <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-2.png') }}" alt="">
-  </div>
   </div>
 
-<h1 class="titre-gpartie">Les Membres</h1>
-<div class="membres">
-  <div class="division-membres">
-    <div class="pane col-sm-12">
-    <div class="pane col-sm-3">
-      <div class="polaroid">
-        <div class="containere">
-          <center>
-            <h3 style="color:black">Tony Bigot</h3>
-            <a data-target="#tony" data-toggle="collapse" aria-expanded="false" aria-controls="tony">
-              <img id="imgMembre" src="{{ url_for('static',filename='img/Tony-Bigot.png') }}" alt="Tony Bigot"></img>
-            </a>
-          </center>
-          <section id="tony" class="collapse">
-            <p style="margin-top :25px">
-              <br />Premier prix du conservatoire d'Orléans<br />
-              <br />Premier prix régional<br />
-              <br />Médaille d'or cu CNR de Paris<br />
-              <br />Titulaire du diplôme d'état de professeur de clarinette<br />
-              <br />Professeur dans les écoles municipales de musique de La Chapelle Saint-Mesmin, Gien et Saint Denis-en-Val
-            </p>
-          </section>
-        </div>
-      </div>
-    </div>
-    </div>
-    <div class="pane col-sm-12">
-      <div class="pane col-sm-3">
-        <div class="polaroid">
-          <div class="containere">
-            <center>
-              <h3 style="color:black">Frédéric Dudilet</h3>
-              <a data-target="#frederic" data-toggle="collapse" aria-expanded="false" aria-controls="frederic">
-                <img id="imgMembre" src="{{ url_for('static',filename='img/Frederic-Dudilet.png') }}" alt="Frederic Dudilet"></img>
-              </a>
-            </center>
-            <section id="frederic" class="collapse">
-              <p style="margin-top :25px">
-                <br />Premier prix du conservatoire d'Orléans<br />
-                <br />Premier prix régional<br />
-                <br />Titulaire du CAPES<br />
-                <br />Titulaire du diplôme d'état de professeur de clarinette<br />
-                <br />Professeur au collège de Saint-Laurent-des-Eaux</p>
+  <h1 class="titre-gpartie">Les Membres</h1>
+  <div class="membres">
+    <div class="division-membres">
+      <div class="pane col-sm-12">
+        <div class="pane col-sm-3">
+          <div class="polaroid">
+            <div class="containere">
+              <center>
+                <h3 style="color:black">Tony Bigot</h3>
+                <a data-target="#tony" data-toggle="collapse" aria-expanded="false" aria-controls="tony">
+                  <img id="imgMembre" src="{{ url_for('static',filename='img/Tony-Bigot.png') }}" alt="Tony Bigot"></img>
+                </a>
+              </center>
+              <section id="tony" class="collapse">
+                <p style="margin-top :25px">
+                  <br />Premier prix du conservatoire d'Orléans<br />
+                  <br />Premier prix régional<br />
+                  <br />Médaille d'or cu CNR de Paris<br />
+                  <br />Titulaire du diplôme d'état de professeur de clarinette<br />
+                  <br />Professeur dans les écoles municipales de musique de La Chapelle Saint-Mesmin, Gien et Saint Denis-en-Val
+                </p>
               </section>
             </div>
           </div>
         </div>
       </div>
-  </div>
-  <div class="division-membres">
-    <div class="pane col-sm-12">
-      <div class="pane col-sm-3">
-        <div class="polaroid">
-          <div class="containere">
-            <center>
-              <h3 style="color:black">Robert Ramon</h3>
-              <a data-target="#robert" data-toggle="collapse" aria-expanded="false" aria-controls="robert">
-                <img id="imgMembre" src="{{ url_for('static',filename='img/Robert-Ramon.png') }}" alt="Robert Ramon"></img>
-              </a>
-            </center>
-            <section id="robert" class="collapse">
-              <p style="margin-top :25px">
-                <br />Premier prix du conservatoire d'Orléans<br />
-                <br />Premier prix du conservatoire de Saint-Etienne<br />
-                <br />Médaille d'or du conservatoire de Saint-Etienne<br />
-                <br />Titulaire du diplôme d'état de professeur de clarinette<br />
-                <br />Professeur au CRC d'Olivet</p>
+      <div class="pane col-sm-12">
+        <div class="pane col-sm-3">
+          <div class="polaroid">
+            <div class="containere">
+              <center>
+                <h3 style="color:black">Frédéric Dudilet</h3>
+                <a data-target="#frederic" data-toggle="collapse" aria-expanded="false" aria-controls="frederic">
+                  <img id="imgMembre" src="{{ url_for('static',filename='img/Frederic-Dudilet.png') }}" alt="Frederic Dudilet"></img>
+                </a>
+              </center>
+              <section id="frederic" class="collapse">
+                <p style="margin-top :25px">
+                  <br />Premier prix du conservatoire d'Orléans<br />
+                  <br />Premier prix régional<br />
+                  <br />Titulaire du CAPES<br />
+                  <br />Titulaire du diplôme d'état de professeur de clarinette<br />
+                  <br />Professeur au collège de Saint-Laurent-des-Eaux</p>
               </section>
             </div>
           </div>
         </div>
       </div>
-    <div class="pane col-sm-12">
-    <div class="pane col-sm-3">
-      <div class="polaroid">
-        <div class="containere">
-          <center>
-          <h3 style="color:black">Olivier Roussillat</h3>
-          <a data-target="#olivier" data-toggle="collapse" aria-expanded="false" aria-controls="olivier">
-            <img id="imgMembre" src="{{ url_for('static',filename='img/Olivier-Roussillat.png') }}" alt="Olivier Roussillat"></img>
-          </a>
-          </center>
-          <section id="olivier" class="collapse">
-            <p style="margin-top :25px">
-              <br />Premier prix du conservatoire d'Orléans<br />
-              <br />Premier prix régional<br />
-              <br />Médaille d'or cu CNR de Paris<br />
-              <br />Ancien directeur de la Musique Municipale d'Orléans<br />
-              <br /> Professeur au CRC de Fleury-les-Aubrais </p>
-          </section>
+    </div>
+    <div class="division-membres">
+      <div class="pane col-sm-12">
+        <div class="pane col-sm-3">
+          <div class="polaroid">
+            <div class="containere">
+              <center>
+                <h3 style="color:black">Robert Ramon</h3>
+                <a data-target="#robert" data-toggle="collapse" aria-expanded="false" aria-controls="robert">
+                  <img id="imgMembre" src="{{ url_for('static',filename='img/Robert-Ramon.png') }}" alt="Robert Ramon"></img>
+                </a>
+              </center>
+              <section id="robert" class="collapse">
+                <p style="margin-top :25px">
+                  <br />Premier prix du conservatoire d'Orléans<br />
+                  <br />Premier prix du conservatoire de Saint-Etienne<br />
+                  <br />Médaille d'or du conservatoire de Saint-Etienne<br />
+                  <br />Titulaire du diplôme d'état de professeur de clarinette<br />
+                  <br />Professeur au CRC d'Olivet</p>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pane col-sm-12">
+        <div class="pane col-sm-3">
+          <div class="polaroid">
+            <div class="containere">
+              <center>
+                <h3 style="color:black">Olivier Roussillat</h3>
+                <a data-target="#olivier" data-toggle="collapse" aria-expanded="false" aria-controls="olivier">
+                  <img id="imgMembre" src="{{ url_for('static',filename='img/Olivier-Roussillat.png') }}" alt="Olivier Roussillat"></img>
+                </a>
+              </center>
+              <section id="olivier" class="collapse">
+                <p style="margin-top :25px">
+                  <br />Premier prix du conservatoire d'Orléans<br />
+                  <br />Premier prix régional<br />
+                  <br />Médaille d'or cu CNR de Paris<br />
+                  <br />Ancien directeur de la Musique Municipale d'Orléans<br />
+                  <br /> Professeur au CRC de Fleury-les-Aubrais </p>
+              </section>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  </div>
-</div>
-{% endblock %}
+  {% endblock %}
