--- a/Developpement/templates/quatuor/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor/quatuor_presse_actu.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
 <style>
-  body{
+  body {
     background-color: rgb(15, 15, 15)
   }
 </style>
@@ -10,27 +10,35 @@
 <div id="myCarousel" class="carousel slide " data-ride="carousel" data-interval="7500">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li id="actu" data-target="#myCarousel" data-slide-to="0" ></li>
-    <li id="actu" data-target="#myCarousel" data-slide-to="1" ></li>
-    <li id="actu" data-target="#myCarousel" data-slide-to="2" ></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="0"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="1"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner ">
     <div class="item active actu">
-        <img src="{{ url_for('static',filename='img/presentation-quatuor-1.png' ) }}" alt="presentation-quatuor-1" class="image-actu">
+      <img src="{{ url_for('static',filename='img/presentation-quatuor-1.png' ) }}" alt="presentation-quatuor-1" class="image-actu">
       <div id="contour" class="carousel-caption">
-          <a href="/quatuor/presse/article/{{ caroussel[0][0]}}"> <h3 id="actu">{{ caroussel[0][0]}}</h3></a>
-          <a href="/quatuor/presse/article/{{ caroussel[0][0]}}"> <p id="actu">{{ caroussel[0][1]}}</p></a>
+        <a href="/quatuor/presse/article/{{ caroussel[0][0]}}">
+          <h3 id="actu">{{ caroussel[0][0]}}</h3>
+        </a>
+        <a href="/quatuor/presse/article/{{ caroussel[0][0]}}">
+          <p id="actu">{{ caroussel[0][1]}}</p>
+        </a>
       </div>
     </div>
 
     <div class="item actu">
       <div class="actu">
-          <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
+        <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
         <div id="contour" class="carousel-caption">
-            <a href="/quatuor/presse/article/{{ caroussel[1][0]}}"> <h3 id="actu">{{ caroussel[1][0]}}</h3></a>
-            <a href="/quatuor/presse/article/{{ caroussel[1][0]}}"> <p id="actu">{{ caroussel[1][1]}}</p></a>
+          <a href="/quatuor/presse/article/{{ caroussel[1][0]}}">
+            <h3 id="actu">{{ caroussel[1][0]}}</h3>
+          </a>
+          <a href="/quatuor/presse/article/{{ caroussel[1][0]}}">
+            <p id="actu">{{ caroussel[1][1]}}</p>
+          </a>
         </div>
       </div>
     </div>
@@ -40,8 +48,12 @@
       <div class="actu">
         <img src="{{ url_for('static',filename='img/presentation-quatuor-3.png' ) }}" alt="presentation-quatuor-3" class="image-actu">
         <div id="contour" class="carousel-caption">
-              <a href="/quatuor/presse/article/{{ caroussel[2][0]}}"> <h3 id="actu">{{ caroussel[2][0]}}</h3></a>
-              <a href="/quatuor/presse/article/{{ caroussel[2][0]}}"> <p id="actu">{{ caroussel[2][1]}}</p></a>
+          <a href="/quatuor/presse/article/{{ caroussel[2][0]}}">
+            <h3 id="actu">{{ caroussel[2][0]}}</h3>
+          </a>
+          <a href="/quatuor/presse/article/{{ caroussel[2][0]}}">
+            <p id="actu">{{ caroussel[2][1]}}</p>
+          </a>
         </div>
       </div>
     </div>
