--- a/Developpement/templates/contact/contact_ficheTechnique.html
+++ b/Developpement/templates/contact/contact_ficheTechnique.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% block main %}
-<h1>Fiche Technique Concert</h1>
 <div class="liens">
-  <h2 id="hliens">Les Membres</h2>
+  <h2 id="hliens">Fiche Technique Concerts</h2>
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
+  <div class="center">
+    <p>Ici vous pourrez trouvez la fiche technique concernant les concerts du quatuor divertimento</p>
+    <embed src="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
+    <br>
+    <a href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" download="fichetechnique.pdf"><span class="glyphicon glyphicon-save"></span> Télécharger la fiche technique</a>
+  </div>
 </div>
+<br>
 
 {% endblock %}
